# lmux

./: .gitignore  README.md  package-lock.json  package.json
docs/: README.md
docs/bridgespace-re/: README.md
docs/bridgespace-re/03-platforms/: linux-deb.md  macos-dmg.md  windows-exe.md
docs/bridgespace-re/04-multiagent/: swarm-protocol.md
docs/bridgespace-re/05-frontend/: js-bundles.md
docs/bridgespace-re/06-auth/: auth-system.md
docs/bridgespace-re/07-voice/: voice-system.md
docs/design/: animations-and-states.md  colors-and-tokens.md  overview.md  theme-system.md
docs/infrastructure/: build-and-dev.md  code-signing.md  optimization-history.md  rust-backend.md
docs/plans/: bug-window-reset.md  cmux-quality-roadmap.md  multiplatform-implementation.md  ptrcode-multiagent.md  ptrterminal-roadmap.md  rich-browser-pane.md
scripts/: aider  benchmark-typing.py  claude  codex  gemini  lmux-agent  lmux-bashrc  lmuxctl
src/: App.tsx  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  socket.rs
src-tauri/src/commands/: mod.rs  notification.rs  terminal.rs
src-tauri/src/db/: storage.rs
src-tauri/src/pty/: manager.rs  monitor.rs  session.rs
src/hooks/: useWorkspacePersist.ts
src/lib/: agents.ts  colors.ts  gridTemplates.ts  ipc.ts  keybindings.ts  notifications.ts  perfTelemetry.ts  terminalInputRegistry.ts
src/stores/: paneFontStore.ts  paneMetadataStoreCompat.ts  terminalScreenStore.ts  workspaceLayoutStore.ts  workspaceListStore.ts  workspaceStore.old.ts  workspaceStore.ts
src/types/: index.ts  workspace.ts
(+31 files in other folders)
